Add config AppConfig.java files for to using env file in application.properties Add ErroDetails files CustomExceptionHandler fix method handleValidationException