@@ -1,40 +1,38 @@
 package com.example.slaega.exception;
 
+import com.example.slaega.controller.TodoController;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-import java.util.Date;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 @ControllerAdvice
-public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
+@Data
+public class CustomExceptionHandler {
 
 
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(
-            MethodArgumentNotValidException ex,
-            HttpHeaders headers, HttpStatus status, WebRequest request) {
-
-        Map<String, Object> responseBody = new LinkedHashMap<>();
-        responseBody.put("timestamp", new Date());
-        responseBody.put("status", status.value());
-
-        List<String> errors = ex.getBindingResult().getFieldErrors()
-                .stream()
-                .map(x -> x.getDefaultMessage())
-                .collect(Collectors.toList());
-        errors.forEach(p->{
-            System.out.println(p);
-        });
-        responseBody.put("errors", errors);
-
-        return new ResponseEntity<>(responseBody, headers, status);
+//    @ExceptionHandler(MethodArgumentNotValidException.class)
+    @ExceptionHandler({MethodArgumentNotValidException.class})
+    public ResponseEntity<Object> handleValidationException(MethodArgumentNotValidException ex) {
+        ErrorDetails error = new ErrorDetails();
+        error.setCode(HttpStatus.BAD_REQUEST);
+        List<String> collect = ex.getBindingResult().getFieldErrors().stream().filter(Objects::nonNull)
+                .map(m -> (m.getField() + " " + m.getDefaultMessage())).toList();
+        List<String> message = new ArrayList<String>(collect);
+        error.setMessage(message);
+        return new ResponseEntity<Object>(error, HttpStatus.BAD_REQUEST);
     }
+
 
 }
